--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.19.1",
     "bcrypt": "^5.1.1",
     "nest-winston": "^1.9.7",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "uuid": "^10.0.0",
+    "winston": "^3.14.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
